# collab-cloud

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
client/: README.md
docs/: deployment.md  protocol.md  security.md
hub-connector/: README.md
relay/: .env.example  Dockerfile  README.md  auth.py  config.example.yaml  docker-compose.yml  relay.py  requirements.txt  router.py  store.py
relay/tests/: test_auth.py  test_e2e.py  test_store.py
